--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,29 @@
-Flask
-Flask-SQLAlchemy
-Flask-Bcrypt
-Flask-Mail
-Flask-Login
-requests
-gunicorn
-pymysql
-sqlalchemy
-gencoder
+asn1crypto==0.24.0
+Authlib==0.10
+bcrypt==3.1.6
+blinker==1.4
+certifi==2018.11.29
+cffi==1.11.5
+chardet==3.0.4
+Click==7.0
+cryptography==2.4.2
+Django==2.1.5
+Flask==1.0.2
+Flask-Bcrypt==0.7.1
+Flask-Login==0.4.1
+Flask-Mail==0.9.1
+Flask-SQLAlchemy==2.3.2
+gencoder==0.1.1
+gunicorn==19.9.0
+idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.10
+MarkupSafe==1.1.0
+pycparser==2.19
+PyMySQL==0.9.3
+pytz==2018.9
+requests==2.21.0
+six==1.12.0
+SQLAlchemy==1.2.16
+urllib3==1.24.1
+Werkzeug==0.14.1
